<resources>
    <string name="app_name">Weather</string>
    <string name="loading_city_fail_message">Can\'t get data. Check your connection</string>
    <string name="current_temp">Current temp is %s C</string>
    <string name="details_button_text">More info</string>
    <string name="add_new_city">Add city</string>
    <string name="add_new_city_instruction">Enter city (For example Novosibirsk or Novosibirsk,RU) and press find</string>
    <string name="enter_city_edit_text_hint">Enter city name here</string>
    <string name="find_city_button_text">Find</string>
    <string name="bad_find">City not found or server has problems</string>
    <string name="city_finded">City successfully add</string>
    <string name="last_update_time">Last update time: %s</string>
    <string name="update_city">Update</string>
    <string name="delete_city">Delete</string>
    <string name="city_deleted">City deleted</string>
    <string name="detail_info_title">Detail information</string>
    <string name="detail_description">Description: %s</string>
    <string name="pressure_value">Pressure: %s</string>
    <string name="humidity_value">Humidity: %s percent</string>
    <string name="wind_speed">Wind speed: %s meter/sec</string>
    <string name="cloudiness_value">Cloudiness: %s percent</string>
    <string name="country_code_value">Country code: %s</string>
</resources>
